# AI-Coaching-Platform

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.test  Makefile  README.md  TASK_3_COMPLETION_SUMMARY.md  __init__.py  alembic.ini  docker-compose.build.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.vault.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-full.txt  requirements-redis.txt  requirements-test.txt  requirements.txt  temp_commit_message.txt  test_pr.md  test_workflows.md
.claude/: README.md  config.json  context.md  development_guide.md  snippets.json  vscode_settings.json  workflows.md
.claude/templates/: fastapi_endpoint.py  test_template.py
.docs/: INTEGRATION_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  README.md
.docs/architecture/: data-layer.md  microservices.md  security.md
.docs/development/: database-management.md  patterns.md  quick-start.md
.docs/guides/: KNOWLEDGE_SERVICE_DOCS.md  PERSONALITY_SYSTEM_DOCS.md  SYSTEM_INTEGRATION_GUIDE.md  VISUAL_PROGRAM_BUILDER_DOCS.md
.docs/specs/: personality-system.md  q1-2025-priorities.md  testing-service-spec.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  coderabbit.yml  deploy-staging.yml  test.yml
.kiro/steering/: CONSOLIDATION_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  ENDPOINTS_IMPLEMENTED.md  FIXTURE_CONSOLIDATION_SUMMARY.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  RAG_PIPELINE_IMPROVEMENTS.md  README.md  SECURITY_IMPROVEMENTS.md  TESTING_IMPLEMENTATION.md  ai-ml-integration.md  api-design.md  api-gateway-status.md  auth-api.md  code-quality.md  database-design.md  docker-guide.md  docker-optimizations-summary.md  fixes-implemented.md  mvp-architecture.md  mvp-current-state.md  next-development-priorities.md  product.md  shared-models.md  (+4 more)
alembic/: env.py
docs/: ADDITIONAL_FIXES_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  TESTING_SUMMARY.md  docker-optimizations-implemented.md  final-corrections-summary.md
migrations/: env.py
nginx/: nginx.conf
scripts/: README.md  build-docker-images.sh  check-dependencies.py  check-ollama-models.ps1  clean-test-state.py  create-test-db.sql  db-migration-manager.py  dead_code_analysis.py  demo-improvements.py  docker-build-optimized.ps1  docker-health-monitor.ps1  env_cleanup.py  final-validation.py  generate-requirements.py  generate_openapi_schemas.py  hardcoded_values_analysis.py  healthcheck.py  init-db.sql  maintenance-guide.py  manage-ollama-models.ps1  ollama-status.ps1  pull-ollama-models.sh  quality_gates.py  run-auth-service.ps1  run-performance-tests.py  seed-test-data.py  setup-performance-monitoring.py  setup-test-env.sh  test-ai-services.ps1  test-api-gateway.ps1  test-auth-service.ps1  test-auth-service.py  test-chromadb-ollama-setup.py  test-json-error-handling.py  test-lua-script.py  test-rate-limiter-functionality.py  test-rate-limiter-race-condition.py  test-redis-improvements.py  test-service-dependencies.ps1  validate-all-improvements.py  (+9 more)
services/auth-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/auth-service/app/: __init__.py  database.py  main.py
services/auth-service/app/dependencies/: __init__.py  auth.py
services/auth-service/app/routes/: __init__.py  auth.py
services/auth-service/app/services/: __init__.py  auth_service.py  email_service.py
services/auth-service/tests/: conftest.py  test_auth_endpoints.py  test_database_operations.py  test_main.py  test_password_reset_endpoints.py  test_security.py
services/channel-service/: Dockerfile  pyproject.toml  requirements.txt
services/channel-service/app/: __init__.py  ai_client.py  channel_manager.py  database.py  main.py  models.py
services/channel-service/app/channels/: __init__.py  base.py  telegram.py  web_widget.py  whatsapp.py
services/channel-service/app/dependencies/: auth.py
services/channel-service/app/static/: widget-example.html  widget.js
services/channel-service/tests/: __init__.py  conftest.py  test_main.py  test_websocket_connections.py
services/creator-hub-service/: Dockerfile  pyproject.toml  requirements.txt
services/creator-hub-service/app/: __init__.py  ai_client.py  condition_evaluator.py  consistency_monitor.py  database.py  debug_analytics.py  main.py  models.py  personality_engine.py  personality_models.py  program_engine.py  program_models.py  prompt_generator.py  step_models.py  step_processor.py
services/creator-hub-service/app/dependencies/: __init__.py  auth.py
services/creator-hub-service/app/routers/: __init__.py  creators.py  knowledge.py  programs.py  widgets.py
services/creator-hub-service/tests/: __init__.py  conftest.py  test_health_endpoints.py  test_main.py
shared/: __init__.py  pyproject.toml
shared/ai/: chromadb_manager.py  ollama_manager.py
shared/cache/: __init__.py  health_checks.py  message_queue.py  redis_client.py  session_store.py
shared/config/: __init__.py  env_constants.py  regex_patterns.py  settings.py
shared/exceptions/: __init__.py  auth.py  base.py  documents.py  widgets.py
shared/models/: __init__.py  auth.py  base.py  conversations.py  database.py  documents.py  widgets.py
shared/monitoring/: __init__.py  alerting.py  health_checks.py  metrics.py  privacy.py  tracing.py
shared/security/: __init__.py  common_passwords.txt  gdpr_compliance.py  jwt_manager.py  password_security.py  rate_limiter.py  rbac.py
shared/tests/: __init__.py  test_cache.py  test_config.py  test_models.py  test_security.py  test_utils.py  test_validators.py
shared/utils/: __init__.py  helpers.py  serializers.py
shared/validators/: __init__.py  business.py  common.py
test_endpoints/: README.md
tests/: TEST_CONSOLIDATION_SUMMARY.md  conftest.py  test_auth_model_validation.py  test_auth_service.py  test_database_configuration.py  test_fixtures_integration.py  test_multi_tenant_isolation.py  test_password_reset.py  test_password_security.py  test_redis_caching.py  test_security_improvements.py  test_security_reliability_fixes.py
(+146 files in other folders)
