[tool.poetry]
name = "shared-models"
version = "0.1.0"
description = "Shared models and utilities for MVP Coaching AI Platform"
authors = ["MVP Team <team@mvp-coaching.com>"]
packages = [{include = "shared", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = {extras = ["hiredis"], version = "^5.0.0"}
hiredis = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.12.0"
orjson = "^3.9.0"
msgpack = "^1.0.0"
aiohttp = "^3.9.0"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
fakeredis = "^2.20.0"
mypy = "^1.7.0"
types-redis = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100