[tool.poetry]
name = "creator-hub-service"
version = "0.1.0"
description = "Creator Hub service for MVP Coaching AI Platform"
authors = ["MVP Team <team@mvp-coaching.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
python-magic = "^0.4.27"
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"
shared-models = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100